# misc-testing

./: ai-model-services.md  fix-ssh-account-expired.md
clickhouse/: importing-sql-dumps.md  insert_user.xml  memory-limit-exceeded-aggregating-transform.md
databases/: pg-connection-pooling-high-volume.md  pg-permission-denied-schema-public.md  pg-replication-reconstruction-from-metadata.md
fastapi/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
fastapi/app/: cache.py  config.py  database.py  main.py  models.py  requirements.txt  routes.py  schemas.py  telemetry.py
fastapi/config/: nginx.conf  otel-collector-config.yaml  valkey.conf
fastapi/files/: Dockerfile
forgejo/: .env.example  .gitignore  README.md  docker-compose.yml
icinga2/: README.md
kafka/: .env  Dockerfile  README.md  docker-compose.yml
monitoring/: README.md  docker-compose.yml
netplan/: README.md  add_secondary_ips_to_netplan.sh
nginx/: Dockerfile  README.md  docker-compose.yml  nginx.conf
nominatim/: Chart.yaml  README.md  values-prodct.yaml  values-prodire.yaml  values-systest.yaml  values.yaml
pg_barman/: Dockerfile  README.md  barman-launcher.sh  custom-entrypoint.sh  docker-compose.yml
pg_stat_ch/: hot-reload-parameters.md  pg_stat_ch-grafana-dashboard.json  pg_stat_ch_glibc_fix.md  postgres_operator.md
pgcat/: .gitignore  README.md  docker-compose.yml
pgo/: README.md  test.yaml
pxc/: README.md
rustfs/: README.md  docker-compose.yml
ssh/: reset-user-passwords.sh
turboapi/: .env  .env.example  README.md  docker-compose-cluster.yml  (+2 more)
(+846 files in other folders)
